Chương 2:: 2.4: Built-in directives: 1-3: ngClass -> ngStyle.

--- a/tls-first-app/src/project-two/binding/binding.component.html
+++ b/tls-first-app/src/project-two/binding/binding.component.html
@@ -1,4 +1,6 @@
 =======================================
+<!-- Template Syntax -->
+<!-- Interpolation -->
 <h4>{{ title }} - {{ showInfo() }}</h4>
 
 <!-- Attribute -->
@@ -10,6 +12,6 @@
 <!-- Class -->
 <p [class.title] = "isActive">NeoTien</p>
 
-
+<!-- Style -->
 <button [style.color]="isActive ? 'red': 'green'">Red</button>
 <button [style.background-color]="isActive ? 'cyan': 'grey'" >Save</button>
