--- a/tls-first-app/src/styles.css
+++ b/tls-first-app/src/styles.css
@@ -2,3 +2,23 @@
 .hidden{
     display: none;
 }
+
+.optBlue{
+    background-color: blueviolet !important;
+    color: white;
+}
+
+.optYellow{
+    background-color: rgb(255, 251, 6) !important;
+    color: red;
+}
+
+.optBlack{
+    background-color: black !important;
+    color: yellow;
+}
+
+.result{
+    padding: 10px;
+    margin-top: 10px;
+}
